--- a/project-folder/pages/video.html
+++ b/project-folder/pages/video.html
@@ -1,21 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Meta Information -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Page Title -->
     <title>Islamic Videos - IslamicPath</title>
-    <link rel="stylesheet" href="css/main.css">
+    <!-- Linking External CSS -->
+    <link rel="stylesheet" href="../global/main.css">
+    <!-- Name: [Your Name], ID: [Your ID], Section: [Your Section], Date: March 20, 2025 -->
 </head>
 <body>
-
+    <!-- Header Section -->
     <header>
         <h1>Islamic Educational Videos</h1>
         <p>Watch and learn from Islamic scholars and Quran recitations</p>
     </header>
 
+    <!-- Navigation Section -->
     <nav>
         <ul>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
             <li><a href="services.html">Services</a></li>
             <li><a href="schedule.html">Prayer Schedule</a></li>
             <li><a href="video.html">Videos</a></li>
@@ -23,54 +29,66 @@
         </ul>
     </nav>
 
-    <section class="content">
-        <h2>Featured Islamic Videos</h2>
+    <!-- Main Content Section -->
+    <main>
+        <section class="content">
+            <h2>Featured Islamic Videos</h2>
 
-        <div class="video-container">
-            <iframe width="560" height="315" 
-                src="https://www.youtube.com/embed/qDcFJz5NQmE" 
-                title="The Beauty of Islam" 
-                frameborder="0" 
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-                allowfullscreen>
-            </iframe>
-        </div>
+            <div class="video-container">
+                <iframe width="560" height="315" 
+                    src="https://youtu.be/UitSEoGBvls?si=f-SwDPHdvGwFCVcU" 
+                    title="Quran Recitation by saud Al-shuraim" 
+                    frameborder="0" 
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+                    allowfullscreen>
+                </iframe>
+                <p class="video-desc" style="display: none;">Beautiful recitation of Surah Al-Baqarah.</p>
+                <button onclick="toggleDescription(this)">Show Description</button>
+            </div>
 
-        <div class="video-container">
-            <iframe width="560" height="315" 
-                src="https://www.youtube.com/embed/KTYD9e7GkbA" 
-                title="Quran Recitation by Mishary Rashid Alafasy" 
-                frameborder="0" 
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-                allowfullscreen>
-            </iframe>
-        </div>
+            <div class="video-container">
+                <iframe width="560" height="315" 
+                    src="https://youtu.be/Cdu6H8wDorY" 
+                    title="Hadith Explanation - Islamic Lessons" 
+                    frameborder="0" 
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+                    allowfullscreen>
+                </iframe>
+                <p class="video-desc" style="display: none;">Explanation of a key Hadith by a scholar.</p>
+                <button onclick="toggleDescription(this)">Show Description</button>
+            </div>
 
-        <div class="video-container">
-            <iframe width="560" height="315" 
-                src="https://www.youtube.com/embed/vZGZKRFLuxM" 
-                title="Hadith Explanation - Islamic Lessons" 
-                frameborder="0" 
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-                allowfullscreen>
-            </iframe>
-        </div>
+            <div class="video-container">
+                <iframe width="560" height="315" 
+                    src="https://watch.islamchannel.tv/watch/37684572" 
+                    title="Islamic History and Civilization" 
+                    frameborder="0" 
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+                    allowfullscreen>
+                </iframe>
+                <p class="video-desc" style="display: none;">Overview of Islamic contributions to history.</p>
+                <button onclick="toggleDescription(this)">Show Description</button>
+            </div>
+        </section>
+    </main>
 
-        <div class="video-container">
-            <iframe width="560" height="315" 
-                src="https://www.youtube.com/embed/Yb9i3qy58Y8" 
-                title="Islamic History and Civilization" 
-                frameborder="0" 
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-                allowfullscreen>
-            </iframe>
-        </div>
-
-    </section>
-
+    <!-- Footer Section -->
     <footer>
-        <p>&copy; 2025 IslamicPath. All rights reserved.</p>
+        <p>© 2025 IslamicPath. All rights reserved.</p>
     </footer>
 
+    <!-- JavaScript for Interactivity -->
+    <script>
+        function toggleDescription(button) {
+            const description = button.previousElementSibling;
+            if (description.style.display === "none") {
+                description.style.display = "block";
+                button.textContent = "Hide Description";
+            } else {
+                description.style.display = "none";
+                button.textContent = "Show Description";
+            }
+        }
+    </script>
 </body>
 </html>
