--- a/project-folder/pages/video.html
+++ b/project-folder/pages/video.html
@@ -36,19 +36,19 @@
 
             <div class="video-container">
                 <iframe width="560" height="315" 
-                    src="https://youtu.be/UitSEoGBvls?si=f-SwDPHdvGwFCVcU" 
-                    title="Quran Recitation by saud Al-shuraim" 
+                    src="https://www.youtube.com/embed/UitSEoGBvls" 
+                    title="Quran Recitation by Saud Al-Shuraim" 
                     frameborder="0" 
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
                     allowfullscreen>
                 </iframe>
-                <p class="video-desc" style="display: none;">Beautiful recitation of Surah Al-Baqarah.</p>
+                <p class="video-desc" style="display: none;">Beautiful recitation of Surah Al-Baqarah by Saud Al-Shuraim.</p>
                 <button onclick="toggleDescription(this)">Show Description</button>
             </div>
 
             <div class="video-container">
                 <iframe width="560" height="315" 
-                    src="https://youtu.be/Cdu6H8wDorY" 
+                    src="https://www.youtube.com/embed/Cdu6H8wDorY" 
                     title="Hadith Explanation - Islamic Lessons" 
                     frameborder="0" 
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
@@ -66,7 +66,7 @@
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
                     allowfullscreen>
                 </iframe>
-                <p class="video-desc" style="display: none;">Overview of Islamic contributions to history.</p>
+                <p class="video-desc" style="display: none;">Overview of Islamic contributions to history from Islam Channel.</p>
                 <button onclick="toggleDescription(this)">Show Description</button>
             </div>
         </section>
