--- a/project-folder/pages/about.html
+++ b/project-folder/pages/about.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Responsive design -->
 
     <!-- Page Title -->
-    <title>About Us - IslamicPath</title>
+    <title>About Us - Al-Noor</title>
 
     <!-- Linking External CSS -->
     <link rel="stylesheet" href="../global/main.css">
@@ -17,7 +17,7 @@
 
     <!-- Header -->
     <div id="header">
-        <h1>About IslamicPath</h1>
+        <h1>About Al-Noor</h1>
         <p>Discover our purpose, vision, and goals</p>
     </div>
 
@@ -27,8 +27,6 @@
             <li><a href="../index.html">Home</a></li>
             <li><a href="about.html">About</a></li> <!-- Current Page -->
             <li><a href="services.html">Services</a></li>
-            <li><a href="schedule.html">Prayer Schedule</a></li>
-            <li><a href="video.html">Videos</a></li>
             <li><a href="feedback.html">Feedback</a></li>
         </ul>
     </div>
@@ -37,7 +35,7 @@
     <!-- About Section -->
     <section class="content">
         <h2 class="section-title">Who We Are</h2>
-        <p><strong>IslamicPath</strong> is an educational platform dedicated to providing authentic Islamic knowledge.
+        <p><strong>Al-Noor</strong> is an educational platform dedicated to providing authentic Islamic knowledge.
             Our goal is to help Muslims and non-Muslims understand Islam through Quranic teachings, Hadith, and
             scholarly insights.</p>
     </section>
