--- a/project-folder/index.html
+++ b/project-folder/index.html
@@ -8,7 +8,7 @@
     <!-- Ensures responsive design on mobile devices -->
 
     <!-- Page Title -->
-    <title>IslamicPath - Home</title>
+    <title>Al-Noor - Home</title>
 
     <!-- Linking External CSS for Styling -->
     <link rel="stylesheet" href="global/main.css"> <!-- Main CSS file for global styling -->
@@ -18,7 +18,7 @@
 
     <!-- Header Section -->
     <div id="header">
-        <h1>Welcome to IslamicPath</h1> <!-- Main heading -->
+        <h1>Welcome to Al-Noor</h1> <!-- Main heading -->
         <p>Your source for authentic Islamic education</p> <!-- Short description -->
     </div>
 
@@ -28,8 +28,6 @@
             <li><a href="index.html">Home</a></li> <!-- Link to Home Page -->
             <li><a href="pages/about.html">About</a></li> <!-- Link to About Page -->
             <li><a href="pages/services.html">Services</a></li> <!-- Link to Services Page -->
-            <li><a href="pages/schedule.html">Prayer Schedule</a></li> <!-- Link to Prayer Schedule Page -->
-            <li><a href="pages/video.html">Videos</a></li> <!-- Link to Videos Page -->
             <li><a href="pages/feedback.html">Feedback</a></li> <!-- Link to Feedback Page -->
         </ul>
     </div>
@@ -44,8 +42,8 @@
 
     <!-- About Section -->
     <div id="content">
-        <h3>About IslamicPath</h3> <!-- Section heading -->
-        <p>IslamicPath is a platform designed to help you learn more about Islam, deepen your faith, and stay connected
+        <h3>About Al-Noor</h3> <!-- Section heading -->
+        <p>Al-Noor is a platform designed to help you learn more about Islam, deepen your faith, and stay connected
             with the teachings of the Quran and Sunnah.</p> <!-- Description -->
     </div>
 
@@ -53,7 +51,7 @@
 
     <!-- Footer Section -->
     <div id="footer">
-        <p>&copy; 2025 IslamicPath. All rights reserved.</p> <!-- Copyright Information -->
+        <p>&copy; 2025 Al-Noor All rights reserved.</p> <!-- Copyright Information -->
     </div>
 
 </body>
