--- a/project-folder/pages/about.html
+++ b/project-folder/pages/about.html
@@ -68,7 +68,7 @@
 
     <!-- Footer -->
     <div id="footer">
-        <p>&copy; 2025 IslamicPath. All rights reserved.</p>
+        <p>&copy; 2025 Al-Noor All rights reserved.</p>
     </div>
 
 
