--- a/project-folder/pages/schedule.html
+++ b/project-folder/pages/schedule.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Ensures responsive design on mobile -->
     
     <!-- Page Title -->
-    <title>Prayer Schedule - IslamicPath</title>
+    <title>Prayer Schedule - Al-Noor</title>
 
     <!-- Linking External CSS for Styling -->
     <link rel="stylesheet" href="../global/main.css"> <!-- Main CSS file for general styling -->
@@ -26,8 +26,6 @@
             <li><a href="../index.html">Home</a></li> <!-- Link to Home Page -->
             <li><a href="about.html">About</a></li> <!-- Link to About Page -->
             <li><a href="services.html">Services</a></li> <!-- Link to Services Page -->
-            <li><a href="schedule.html">Prayer Schedule</a></li> <!-- Link to Schedule Page (Current Page) -->
-            <li><a href="video.html">Videos</a></li> <!-- Link to Video Page -->
             <li><a href="feedback.html">Feedback</a></li> <!-- Link to Feedback Page -->
         </ul>
     </div>
@@ -67,7 +65,7 @@
     
     <!-- Footer Section -->
     <div id="footer">
-        <p>&copy; 2025 IslamicPath. All rights reserved.</p> <!-- Copyright Notice -->
+        <p>&copy; 2025 Al-Noor All rights reserved.</p> <!-- Copyright Notice -->
     </div>
 
 </body>
