--- a/project-folder/pages/Donations.html
+++ b/project-folder/pages/Donations.html
@@ -22,8 +22,6 @@
         <li><a href="index.html">Home</a></li> <!-- Link to Home Page -->
         <li><a href="pages/about.html">About</a></li> <!-- Link to About Page -->
         <li><a href="pages/services.html">Services</a></li> <!-- Link to Services Page -->
-        <li><a href="pages/schedule.html">Prayer Schedule</a></li> <!-- Link to Prayer Schedule Page -->
-        <li><a href="pages/video.html">Videos</a></li> <!-- Link to Videos Page -->
         <li><a href="pages/feedback.html">Feedback</a></li> <!-- Link to Feedback Page -->
         <li><a href="pages/Donations.html">Donations</a></li> <!-- Link to Donations Page -->
     </ul>
@@ -60,7 +58,7 @@
 
     <!-- Footer Section -->
     <div id="footer">
-        <p>&copy; 2025 IslamicPath. All rights reserved.</p>
+        <p>&copy; 2025 Al-Noor All rights reserved.</p>
     </div>
 
 </body>
