--- a/project-folder/pages/feedback.html
+++ b/project-folder/pages/feedback.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Feedback - IslamicPath</title>
+    <title>Feedback - Al-Noor</title>
     <link rel="stylesheet" href="../global/main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
@@ -22,8 +22,6 @@
             <li><a href="../index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="services.html">Services</a></li>
-            <li><a href="schedule.html">Prayer Schedule</a></li>
-            <li><a href="video.html">Videos</a></li>
             <li><a href="feedback.html">Feedback</a></li>
         </ul>
     </div>
@@ -69,7 +67,7 @@
         </div>
     </div>
     <div id="footer">
-        <p>&copy; 2025 IslamicPath. All rights reserved.</p>
+        <p>&copy; 2025 Al-Noor All rights reserved.</p>
     </div>
 </body>
 
