--- a/project-folder/pages/video.html
+++ b/project-folder/pages/video.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Page Title -->
-    <title>Islamic Videos - IslamicPath</title>
+    <title>Islamic Videos - Al-Noor</title>
     <!-- Linking External CSS -->
     <link rel="stylesheet" href="../global/main.css">
     <!-- Name: [Your Name], ID: [Your ID], Section: [Your Section], Date: March 20, 2025 -->
@@ -74,7 +74,7 @@
 
     <!-- Footer Section -->
     <footer>
-        <p>© 2025 IslamicPath. All rights reserved.</p>
+        <p>© 2025 Al-Noor. All rights reserved.</p>
     </footer>
 
     <!-- JavaScript for Interactivity -->
