--- a/project-folder-last/index.html
+++ b/project-folder-last/index.html
@@ -22,10 +22,10 @@
 <body>
 
     <!-- Header Section -->
-    <div id="header">
+    <header id="header">
         <h1>Welcome to Al-Noor</h1> <!-- Main heading -->
         <p>Your source for authentic Islamic education</p> <!-- Short description -->
-    </div>
+    </header>
 
     <!-- Navigation Menu -->
     <div id="nav">
@@ -55,7 +55,7 @@
     </div>
 
 <!-- Footer Section -->
-<div id="footer">
+<footer id="footer">
     <div class="footer-left">
         <p>&copy; 2025 Al-Noor. All rights reserved.</p> <!-- Copyright Information -->
     </div>
@@ -67,7 +67,7 @@
             Phone: +123-456-7890
         </address>
     </div>
-</div>
+</footer>
 
 
 
