--- a/project-folder-last/pages/quran-tafsir.html
+++ b/project-folder-last/pages/quran-tafsir.html
@@ -46,7 +46,7 @@
                 <p>Explore the Quran with detailed Tafsir below:</p>
 
                 <!-- Embed Quran & Tafsir Page -->
-                <iframe src="https://quran.com" title="Quran and Tafsir" frameborder="0"></iframe>
+                <iframe src="https://quran.com" title="Quran and Tafsir" ></iframe>
             </section>
 
 
