--- a/project-folder-last/index.html
+++ b/project-folder-last/index.html
@@ -51,7 +51,19 @@
         <p>Al-Noor is a platform designed to help you learn more about Islam, deepen your faith, and stay connected
             with the teachings of the Quran and Sunnah.</p> <!-- Description -->
     </div>
-
+ 
+<!-- Feedback Slider Section -->
+<div id="feedback-slider-container">
+    <h3>User Feedback</h3>
+    <div id="feedback-slider">
+        <button id="prev-btn">&#8592;</button>
+        <div id="feedback-content">
+            <p>Loading feedback...</p>
+        </div>
+        <button id="next-btn">&#8594;</button>
+    </div>
+</div>
+ 
 <!-- Footer Section -->
 <footer id="footer">
     <div class="footer-left">
@@ -66,6 +78,8 @@
         </address>
     </div>
 </footer>
+
+ <script src="scripts/loadFeedback.js"></script>
 
 </body>
 
