--- a/project-folder-last/pages/schedule.html
+++ b/project-folder-last/pages/schedule.html
@@ -40,19 +40,22 @@
         <h2>Today's Prayer Timings</h2>
 
 <!-- Dropdown for city selection -->
-<label for="city">Select City:</label>
-<select id="city">
-  <option value="Jeddah">Jeddah</option>
-  <option value="Makkah">Makkah</option>
-<option value="Riyadh" selected>Riyadh</option>
-  <option value="Dammam">Dammam</option>
-  <option value="Medina">Medina</option>
-  <option value="Abha">Abha</option>
-  <option value="Tabuk">Tabuk</option>
-  <option value="Hail">Hail</option>
-  <option value="Al Khobar">Al Khobar</option>
-  <option value="Al Baha">Al Baha</option>
-</select>
+<div id="city-container">
+    <label for="city">Select City:</label>
+    <select id="city">
+        <option value="Jeddah">Jeddah</option>
+        <option value="Makkah">Makkah</option>
+        <option value="Riyadh" selected>Riyadh</option>
+        <option value="Dammam">Dammam</option>
+        <option value="Medina">Medina</option>
+        <option value="Abha">Abha</option>
+        <option value="Tabuk">Tabuk</option>
+        <option value="Hail">Hail</option>
+        <option value="Al Khobar">Al Khobar</option>
+        <option value="Al Baha">Al Baha</option>
+    </select>
+</div>
+
 
 <table id="schedule-table">
   <thead>
