--- a/project-folder-last/pages/video.html
+++ b/project-folder-last/pages/video.html
@@ -56,8 +56,8 @@
 
             <div class="video-container">
                 <iframe width="560" height="315" 
-                    src="https://watch.islamchannel.tv/watch/37684572" 
-                    title="Islamic History and Civilization" 
+                    src="https://youtu.be/u3DBN0cxIo8?si=-4MKwAAm_mio1TmD" 
+                    title="The History of the Entire Islamic Civilization in 49 Minutes" 
                     allowfullscreen>
                 </iframe>
                 <p >Overview of Islamic contributions to history from Islam Channel.</p>
